welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:36: error: ')' expected but 'return' found.
  return posfinale
  ^